--- a/.github/workflows/gen-client.yml
+++ b/.github/workflows/gen-client.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Get Specs File
         run: |
-          curl -H "Authorization: token ${{ secrets.GH_CQ_BOT }}" https://raw.githubusercontent.com/cloudquery/cloud/main/cloud/internal/servergen/spec.json -o spec.json
+          curl -H "Authorization: token ${{ secrets.GH_CQ_BOT }}" https://raw.githubusercontent.com/cloudquery/cloud/main/platform/internal/servergen/spec.json -o spec.json
 
       - name: Format Specs File
         run: |
@@ -38,8 +38,8 @@ jobs:
           token: ${{ secrets.GH_CQ_BOT }}
           branch: fix/gen-cloudquery-api
           base: main
-          title: 'fix: Generate CloudQuery Go API Client from `spec.json`'
-          commit-message: 'fix: Generate CloudQuery Go API Client from `spec.json`'
+          title: "fix: Generate CloudQuery Go API Client from `spec.json`"
+          commit-message: "fix: Generate CloudQuery Go API Client from `spec.json`"
           body: This PR was created by a scheduled workflow to generate the CloudQuery Go API Client from `spec.json`
           author: cq-bot <cq-bot@users.noreply.github.com>
           labels: automerge
