fix: Update client gen

--- a/client.yaml
+++ b/client.yaml
@@ -1,8 +1,11 @@
 package: cloudquery_platform_api
 generate:
   client: true
+  models: true
 output: client.gen.go
 output-options:
   user-templates:
     # Based on https://github.com/deepmap/oapi-codegen/blob/v1.15.0/pkg/codegen/templates/client.tmpl
     client.tmpl: templates/client.tmpl
+compatibility:
+  always-prefix-enum-values: true
